--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,14 +1,25 @@
 name: CI
 on: [push]
 jobs:
-  build:
+  yamllint:
+    name: Yamllint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '16'
-    - name: Check markdown files using `markdownlint`
-      run: |
-        npm install -g markdownlint-cli
-        markdownlint *.md
+      - uses: actions/checkout@v2
+      - name: Yamllint
+        uses: karancode/yamllint-github-action@master
+        with:
+          yamllint_comment: true
+        env:
+          GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  markdownlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '16'
+      - name: Check markdown files using `markdownlint`
+        run: |
+          npm install -g markdownlint-cli
+          markdownlint *.md
