--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,3 +23,10 @@ jobs:
         run: |
           npm install -g markdownlint-cli
           markdownlint *.md
+  shellcheck:
+    name: Shellcheck
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run ShellCheck
+      uses: ludeeus/action-shellcheck@master
