--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '16'
+          node-version: "16"
       - name: Check markdown files using `markdownlint`
         run: |
           npm install -g markdownlint-cli
@@ -30,3 +30,16 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@master
+  flake8-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x # Choose the desired Python 3 version
+      - name: Install dependencies
+        run: pip install flake8
+      - name: Run Flake8
+        run: flake8
