--- a/s3/s3_config/base_config.json
+++ b/s3/s3_config/base_config.json
@@ -2,12 +2,10 @@
     "storage": {
         "name": "storage-s3",
         "region": "us-east-1",
-        "endpoint": "",
+        "endpoint": "https://s3.us-east-1.amazonaws.com/",
         "bucketName": "kim-backet",
         "storageFolderName": "files",
         "urlExpires": 604800,
-        "accessKeyId": "",
-        "secretAccessKey": "",
         "sslEnabled": true,
         "s3ForcePathStyle": false,
         "externalHost": ""
